theme/standard/styles_layout.css
/* ... */
#program-overview #iconheader{
	margin-top:0px;
	padding-top:0px;
}

#program-overview #programdetails{
	margin-bottom: 0px;;
}

#edit-program-content #programcontent legend,
#program-assignments #programassignments legend,
#program-messages #programmessages legend,
#program-exceptions #programexceptions legend{
	padding-left:46px;
	margin-left:0px;
	padding-top:6px;
	padding-bottom:6px;
}

#edit-program-content #programcontent #course_sets legend,
#program-assignments #programassignments #assignment_categories legend,
#program-messages #programmessages #messages legend{
	padding-left:5px;
}

#edit-program-content #programcontent p,
#program-assignments #programassignments p,
#program-messages #programmessages p,
#program-exceptions #programexceptions p{
	margin-top:0px;
	padding-left:5px;
}

#edit-program-content #programcontent #course_sets p,
#program-messages #programmessages #messages p,
#program-assignments #programassignments #assignment_categories p{
	margin-top:12px;
}

#program-assignments #programassignments #assignment_categories a {
    display: inline;
    float: right;
}

#programcontent #course_sets p{
	padding-left:0px;
}

.nextsetoperator-or{
	width:130px;
	padding:10px 0px;
}

.nextsetoperator-then{
	width:130px;
	padding:10px 0px;
}

input[type="submit"].return-overview,
input[type="submit"].next-assignments,
input[type="submit"].next-messages,
input[type="submit"].program-savechanges{
	margin-top:15px;
    margin-bottom:15px;
}

.local-program fieldset.course_set .coursedeletelink .delete_item,
.local-program fieldset.course_set .course_item{
	width:100%;
	padding-left:20px;
	height:20px;
	padding-top:6px;
	padding-bottom:6px;
	padding-right:0px;
	font-weight:bold;
}

.local-program fieldset.course_set .delete_item a {
    float: right;
}


/*****************************************************************************/
/** Program Assignments **/
/*****************************************************************************/
#assignment_categories .assignment_category th.col0{
	width:300px;
}

#assignment_categories .assignment_category td.col0{
	width:340px;
}

#assignment_categories .assignment_category td.col0 .deletelink{
	border:0px;
	background:none;
	padding:0px;
	padding-bottom:5px;
}

#assignment_categories .assignment_category td.col1,
#assignment_categories .assignment_category th.col1{
	text-align: center;
    width: 60px;
}

#assignment_categories .assignment_category td.col2,
#assignment_categories .assignment_category th.col2{
	width:170px;
}

#assignment_categories .assignment_category.individuals td.col2,
#assignment_categories .assignment_category.individuals th.col2{
	width:270px;
}

#assignment_categories .assignment_category td.col3,
#assignment_categories .assignment_category th.col3{
	width:80px;
}

#assignment_categories .assignment_category td.col3{
	text-align:right;
}

#assignment_categories .assignment_category td,
#assignment_categories .assignment_category th{
	padding:0px 6px;
}

#assignment_categories .assignment_category th{
	padding-bottom:9px;
}

#assignment_categories .assignment_category tr{
	margin-bottom:5px;
}

#assignment_categories .assignment_category button{
	margin-top:20px;
}

#assignment_categories .assignment_category td.col0 div.item{
    padding-right:20px;
    padding-top:5px;
    padding-bottom:5px;
    margin-bottom:5px;
    padding-left:10px;
}

.total_user_count {
    text-align: right;
    padding-right: 6px;
}

.overall_total {
    padding: 6px;
    text-align: right;
}


/*****************************************************************************/
/** Program Exceptions **/
/*****************************************************************************/
.local-program #programexceptions .exceptionactions div{
	float:left;
	padding-right:5px;
}

.local-program #programexceptions .exceptionactions{
    float: none;
    height: 35px;
    margin-top: 10px;
    padding-top: 10px;
    margin-bottom:20px;
}

.local-program #programexceptions .exceptionactions p{
	margin-top:5px;
	margin-bottom:5px;
}

body.course h1.main,
body.course h3.main {
    text-align: left;
}

p.course-prog-alt-view {
    float: right;
}

/**
 * Course and program index page
 */

ul.course-subcat-listing {
    margin: 0px;
}
ul.course-subcat-listing li {
    padding: 2px;
    margin: 0 0 0 25px;
    list-style-image: url('pix/i/item.gif');
    font-size: 120%;
}
ul.course-subcat-listing li.more {
    list-style: none;
    margin: 5px 0 0;
    padding: 0px;
    font-size: 100%;
}

/*
 * Full width class that can be applied to elements
 */
.fullwidth {
    width: 100%;
}

/*
 * Used to highlight a specific row of the manage categories page
 */
div.highlight {
    margin: -3px -10px;
}

/* Generic center button class */
div.center-buttons {
    text-align: center;
}

